@startuml

skinparam class {
	ArrowColor SteelBlue
	BorderColor Dimgray
	HeaderBackgroundColor SteelBlue
	BackgroundColor White
	FontName Calibri bold
	AttributeFontColor #333
	AttributeFontName Calibri
	AttributeFontSize 13
	FontColor Ivory
	FontSize 15
}

hide empty members

class DataImportUI{
-ctrl: DataImportCTRL
-filePath: Path
+importReadings()
+checkIfRoomsAndSensorsExists()

}

class DataImportCtrl{
-roomList: RoomList
-dataImport: DataImport
+importReadingsFromFile()
+roomListSize()
+houseSensorsSize()
+getNrOfImportedReadings()
+getNrOfInvalidReadings()
}

class DataImport{
-parser: JSONParser
-configFilePath: Path
-roomList: RoomList
-log: Logger
-nrOfAddedReadings: int
-nrOfInvalidReadings: int
-sensors: List<sensor>

+getFileExtension()
+getClassName()
+readConfigFile()
+importReadingsFromFile()
+loadReadingFiles()
+importSensorsReadings()
+importReading()
+getNrOfAddedReadings()
+getNrOfInvalidReadings()

}

interface FileReaderReadings {
- filePath: Path
+ importData(Path filePath)
}

class JSONReading{
- filePath: Path
+ importData(Path filePath)
+ readFile()
}

class XMLReading{
- filePath: Path
+ importData(Path filePath)
+importReading()
+ getTagValue()
}

class CSVReading{
- filePath: Path
+ importData(Path filePath)
}

class RoomList {
 - listOfRooms: List<Room>
 + getRoomList()
 +getAllSensors()
  }

class Room {
-sensorListInRoom: SensorList
+getSensorListRoom()
}


class SensorList {
 - sensorList : List<Sensor>

 + getSensorListRoom()
}

class Sensor {
- readingList: ReadingList
+ getReadingListRoom()
}

class ReadingList{
 - listOfReadings: List<Reading>

 + getReadingListRoom()
 + newReading()
 + addReading(reading)

}





Sensor "1"--"..*" ReadingList

SensorList "1"-"..*" Sensor

Room "1" - "..*"SensorList

RoomList "1"-- "..*"Room

RoomList  "1"-o "..*" DataImport


DataImportUI -> DataImportCtrl
DataImportCtrl --> DataImport


DataImport .|> FileReaderReadings
FileReaderReadings <|.. CSVReading
FileReaderReadings <|.. JSONReading
FileReaderReadings <|.. XMLReading

@enduml